# test-avantsoft-backend

./: .tool-versions  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
clients/: models.py  serializers.py  urls.py  views.py
clients/migrations/: 0001_initial.py
core/: settings.py  urls.py
nginx/: default.conf
sales/: models.py  serializers.py  urls.py  views.py
sales/migrations/: 0001_initial.py
tests/: tests_clients.py  tests_sales.py
tests/setup/: __init__.py  conftest.py  factories.py
